--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -10,6 +10,7 @@
 	<meta name="_csrf_header" th:content="${_csrf.headerName}" ></meta>
 	<script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
 	<script type="text/javascript" th:src="@{/js/province.js}"></script>
+	<script type="text/javascript" th:src="@{/js/validata_signup.js}"></script>
 	<script type="text/javascript">
 		$(function() {
 			var token = $("meta[name='_csrf']").attr("content");
@@ -17,19 +18,6 @@
 			$(document).ajaxSend(function(e, xhr, options) {
 				xhr.setRequestHeader(header, token);
 			});
-			var check = true;
-			$("#xy").click(function(){
-				if(check==true)
-					check=false;
-				else
-					check=true;
-				if(check){
-				$("#regirect").removeAttr("disabled");
-				}else{
-					$("#regirect").attr("disabled","disabled");
-				}
-			});
-			
 		});
 	</script>
 </head>
@@ -159,7 +147,7 @@
 				</ul>
 			</div>
 			<div class="accept-btn">
-				<input type="checkbox" id="xy" checked="checked"/>我已阅读并接受《服务协议》
+				<input type="checkbox" id="agreement" checked="checked"/>我已阅读并接受《服务协议》
 			</div>
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 			<div class="resg-btn">
