admin brand feature

--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -14,8 +14,9 @@
     <script src="/js/angular/angular-ui-router.js"></script>
     <script src="/js/angular/ui-router-tabs.js"></script>
     <script src="/js/angular/ui-bootstrap-tpls-0.13.0.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/user.js"></script>
+    <script src="/js/module/app.js"></script>
+    <script src="/js/module/user.js"></script>
+    <script src="/js/module/brand.js"></script>
 </head>
 
 <body ng-app="app">
@@ -43,10 +44,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a ui-sref="provider">品牌管理</a>
+                        <a ui-sref="brand">品牌管理</a>
                     </li>
                     <li>
-                        <a href="goodsSort.html">商品分类管理</a>
+                        <a ui-sref="brand">商品分类管理</a>
                     </li>
                     <li>
                         <a href="goods.html">商品管理</a>
