--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -1,4 +1,4 @@
-<div class="modal-dialog" role="document">
+<div class="modal-dialog files_tab" role="document">
     <div class="modal-content">
         <div class="modal-body">
             <form class="form-horizontal w400">
@@ -9,10 +9,13 @@
                             <input class="form-control" />
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group lhg">
                         <label class="control-label col-sm-2">图片</label>
                         <div class="col-sm-6">
-                            <input type="file" file-upload="upload" />
+                            <button id="uploadImg" class="btn btn-success btn-xs">
+                                <input type="file" file-upload="upload" id="2" index="1">
+                                <a href="#">选择文件</a>
+                            </button>
                         </div>
                     </div>
                 </div>
