--- a/admin/src/main/resources/static/css/style.default.css
+++ b/admin/src/main/resources/static/css/style.default.css
@@ -13,7 +13,8 @@ body {
     color: #636E7B;
     background-color: #fff;
     font-family:'Microsoft Yahei',Helvetica, Arial, sans-serif;
-	font-weight:100
+	font-weight:100;
+    overflow: hidden;
 }
 html, body{
     width: 100%;
