--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -11,6 +11,9 @@
                     </div>
                     <div class="form-group lhg">
                         <label class="control-label col-sm-2">图片</label>
+                        <div class="col-sm-3">
+                            <img src="" width="100" height="100">
+                        </div>
                         <div class="col-sm-6">
                             <button id="uploadImg" class="btn btn-success btn-xs">
                                 <input type="file" file-upload="upload" id="2" index="1">
