--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -11,9 +11,12 @@
                     </div>
                     <div class="form-group lhg">
                         <label class="control-label col-sm-2">图片</label>
+                        <div class="col-sm-3">
+                        	<img width="100" height="100"></img>
+                        </div>
                         <div class="col-sm-6">
                             <button id="uploadImg" class="btn btn-success btn-xs">
-                                <input type="file" file-upload="upload" id="2" index="1">
+                                <input type="file" file-upload="upload" id="2" index="1" />
                                 <a href="#">选择文件</a>
                             </button>
                         </div>
