--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
     <script src="/js/module/app.js"></script>
     <script src="/js/module/user.js"></script>
     <script src="/js/module/brand.js"></script>
+    <script src="/js/module/advertisement.js"></script>
 </head>
 
 <body ng-app="app">
@@ -53,10 +54,10 @@
                         <a href="goods.html">商品管理</a>
                     </li>
                     <li>
-                        <a href="advertRelease.html">广告发布</a>
+                        <a ui-sref="advertise">广告发布</a>
                     </li>
                     <li>
-                        <a href="messageRelease.html">信息发布</a>
+                        <a ui-sref="advertise">信息发布</a>
                     </li>
                     <li>
                         <a href="customer.html">客户行为统计</a>
