--- a/admin/src/main/resources/templates/advertisement/createAdvertise.html
+++ b/admin/src/main/resources/templates/advertisement/createAdvertise.html
@@ -1,32 +1,33 @@
-	<div class="modal-content">
-		<div class="modal-body">
-			<form class="form-horizontal w300">
-				<div class="row">
-					<div class="form-group">
-						<label class="control-label col-sm-2">分类</label>
-						<div class="col-sm-6">
-							<select class="w300">
-								<option>广告位1</option>
-								<option>广告位2</option>
-								<option>广告位3</option>
-							</select>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="control-label col-sm-2">图片</label>
-						<div class="col-sm-6">
-							<input type="file"/>
-						</div>
-					</div>
-					<div class="form-group">
-						<label class="control-label col-sm-2">链接</label>
-						<div class="col-sm-10">
-							<input type="text" class="form-control"/>
-						</div>
+	<div class="contentpanel">
+		<form class="form-horizontal w300">
+			<div class="row">
+				<div class="form-group">
+					<label class="control-label col-sm-2">分类</label>
+					<div class="col-sm-6">
+						<select class="w300">
+							<option>广告位1</option>
+							<option>广告位2</option>
+							<option>广告位3</option>
+						</select>
 					</div>
 				</div>
-			</form>
-		</div>
+				<div class="form-group">
+					<label class="control-label col-sm-2">图片</label>
+					<div class="col-sm-3">
+						<img src="" width="100" height="100" />
+					</div>
+					<div class="col-sm-6">
+						<input type="file"/>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="control-label col-sm-2">链接</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control"/>
+					</div>
+				</div>
+			</div>
+		</form>
 		<div class="modal-footer">
 			<button type="button" class="btn btn-primary">
 				提交
